--- a/mc/one_cmd/triggered.html
+++ b/mc/one_cmd/triggered.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -27,26 +27,27 @@
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
-                    <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
+              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+            </a> </li>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
+                <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-              <i class="fa fa-github fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
-              <i class="fa fa-youtube fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-              <i class="fa fa-twitter fa-fw fa-lg"></i>
-            </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+                <i class="fa fa-youtube fa-fw fa-lg"></i>
+              </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
+                <i class="fa fa-twitter fa-fw fa-lg"></i>
+              </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
+                <i class="fab fa-twitch fa-fw fa-lg"></i>
+              </a> </li>
+          </ul>
         </ul>
       </div>
     </div>
@@ -74,7 +75,7 @@
         </div>
         <div class="col-md-6 my-3">
           <div class="list-group">
-            <a class="list-group-item list-group-item-action">MC Version: 1.9 - 1.10</a>
+            <a class="list-group-item list-group-item-action text-primary">MC Version: 1.9 - 1.10</a>
             <a href="http://pastebin.com/raw/gdCQtisg" class="list-group-item list-group-item-action">Install URL:&nbsp;http://pastebin.com/raw/gdCQtisg</a><a class="list-group-item list-group-item-action" href="http://pastebin.com/raw/ZiTahyWS">UnInstall URL: http://pastebin.com/raw/ZiTahyWS</a>
             <a href="https://youtu.be/iLskHTEAM4I" class="list-group-item list-group-item-action">YouTube Video URL:&nbsp;https://youtu.be/iLskHTEAM4I</a>
             <a href="http://mrgarretto.com" class="list-group-item list-group-item-action">Credits: CMD Combiner by Mr. Garretto</a>
@@ -84,21 +85,20 @@
     </div>
   </div>
   <div class="bg-dark pt-4">
-
-  <div class="py-3 bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+    <div class="py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-</body>
+ </body>
 
 </html>
