--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-dark">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -22,6 +22,7 @@
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
@@ -50,7 +51,7 @@
       <div class="row">
         <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="display-1 text-light">Could not find that page.</h1>
+          <h1 class="text-light display-4">Could not find that page. Sorry...</h1>
         </div>
       </div>
     </div>
@@ -75,6 +76,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-</body>
+ </body>
 
 </html>
