--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-dark">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -46,13 +46,22 @@
       </div>
     </div>
   </nav>
-  <div class="bg-dark py-5 pb-5">
+  <div class="text-center bg-dark py-0 pt-5">
     <div class="container">
       <div class="row">
-        <div class="ml-0 mt-0 col-sm-10 col-md-12" style="">
-          <h2 class="display-5 text-light">Twitter</h2>
-          <p class="text-light">Send me a message via Twitter and I can get back to you as soon as possible!</p>
-          <a class="btn text-white p-0 py-0 pr-0 m-0 mx-0" href="http://bit.ly/tweetsamstep" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-twitter fa-fw fa-1x py-1"></i> Tweet</a>
+        <div class="mx-auto col-lg-5 col-md-7 col-10">
+          <h1>Twitter</h1>
+          <p class="mb-3">Send me a message via Twitter and I can get back to you as soon as possible!</p> <a class="btn text-white p-0 py-0 pr-0 m-0 mx-0" href="http://bit.ly/tweetsamstep" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-twitter fa-fw fa-1x py-1"></i> Tweet</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center bg-dark mt-3">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto col-lg-5 col-md-7 col-10">
+          <h1>Discord</h1>
+          <p class="mb-3">Join my Project Development Discord Server.</p> <a class="btn text-white p-0 py-0 pr-0 m-0 mx-0 btn-primary" href="https://samstep.net/devcord" style="background: rgb(85, 172, 238);" target="_blank" id="center"><i class="fa fa-fw fa-1x py-1 fa-comments"></i>&nbsp;Invite</a>
         </div>
       </div>
     </div>
@@ -70,6 +79,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-</body>
+ </body>
 
 </html>
