--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="theme.css">
   <title>Samstep - Home</title>
   <link rel="icon" href="/images/logo.png">
-  <link rel="stylesheet" type="text/css" href="transition.css"/>
+  <link rel="stylesheet" type="text/css" href="transition.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -53,7 +53,7 @@
         <div class="col-2 mt-2 col-md-3" style=""><img class="ldt-bounce-in d-block rounded-circle img-fluid float-left" src="/images/logo.png" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
           <h1 class="display-1 ldt-fade-in">Welcome!</h1>
-          <p class="ldt-fade-in">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
+          <p class="ldt-fade-in">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time! Use the navigation bar above to checkout some of my work.</p>
         </div>
       </div>
     </div>
@@ -63,11 +63,11 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card text-center">
-            <div class="card-header">Latest Bot Projects</div>
-            <div class="card-body">
-              <h5 class="card-title">ModMail</h5>
+            <div class="card-header bg-primary">Latest Bot Projects</div>
+            <div class="card-body bg-primary">
+              <h5 class="card-title" contenteditable="true">ModMail 2.0</h5>
               <p class="card-text">Contact Discord server moderators or administrators safely and efficiently.</p>
-              <a class="btn btn-primary" href="http://samstep.net/bots/modmail/">Learn More</a>
+              <a class="btn btn-secondary" href="http://samstep.net/bots/modmail/">Learn More</a>
             </div>
           </div>
         </div>
@@ -83,7 +83,6 @@
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> </li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"> </li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"> </li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active" style=""> <img class="d-block img-fluid w-100 mx-auto" src="https://img.youtube.com/vi/hKEv2qAz9_M/maxresdefault.jpg">
@@ -93,13 +92,13 @@
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://img.youtube.com/vi/zMVlPuyuYMk/maxresdefault.jpg">
               </div>
             </div>
-          </div><a class="btn btn-secondary text-center btn-block mx-auto mt-2" href="/mc">See More</a>
+          </div><a class="btn text-center btn-block mx-auto mt-2 btn-primary" href="/mc">See More</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="bg-dark pt-4">
-    <div class="py-3 bg-dark">
+  <div class="pt-4">
+    <div class="py-3">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -113,6 +112,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-</body>
+ </body>
 
 </html>
