--- a/invite-generator.html
+++ b/invite-generator.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="bg-dark">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -58,13 +58,13 @@
   <div class="modal fade pt-5" id="errorModal">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header bg-primary">
           <h5 class="modal-title">Invalid Client ID</h5> <button type="button" class="close" data-dismiss="modal"> <span>×</span> </button>
         </div>
-        <div class="modal-body">
-          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to <a href="https://samstep.net/bots" target="_blank">https://samstep.net/bots</a>.</p>
+        <div class="modal-body bg-primary">
+          <p>Please make sure to enter a Client ID in the specified field. If you are stuck refer to the documentation!</p>
         </div>
-        <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button> </div>
+        <div class="modal-footer bg-primary"> <button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button> </div>
       </div>
     </div>
   </div>
@@ -114,7 +114,7 @@
   <div class="">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 pb-5 mb-5">
           <div class="btn-group">
             <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Select Bot</button>
             <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);"> <a class="dropdown-item" href="#" onclick="getModMailInvite()">ModMail</a>
@@ -137,6 +137,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-</body>
+ </body>
 
 </html>
