--- a/mc/index.html
+++ b/mc/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -47,7 +47,7 @@
       </div>
     </div>
   </nav>
-  <div class="py-5" style="">
+  <div class="py-5 text-body" style="">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -57,23 +57,23 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/lHrQfyynM0k/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Custom Join Message (One Time)</h4>
-              <p class="card-text">Join message for a player when they join for the first time.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_1time">Learn More</a>
+              <p class="card-text">Join message for a player when they join for the first time.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/tutorials/joinmsg_1time">Learn More</a>
             </div>
           </div>
           <div class="card mt-3"> <img class="card-img-top" src="https://img.youtube.com/vi/yprauoIBGgg/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Vanilla Server Series</h4>
-              <p class="card-text">A little series to teach and show you some basic command block examples that can help you in your Minecraft server.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/command_server">Learn More</a>
+              <p class="card-text">A little series to teach and show you some basic command block examples that can help you in your Minecraft server.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/tutorials/command_server">Learn More</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/S0WoWQTGki8/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Custom Join Message (Every Time)</h4>
-              <p class="card-text">Join message for a player everytime they join your server.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/tutorials/joinmsg_everytime">Learn More</a>
+              <p class="card-text">Join message for a player everytime they join your server.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/tutorials/joinmsg_everytime">Learn More</a>
             </div>
           </div>
         </div>
@@ -94,17 +94,17 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/2NdjiZzv4tU/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Gamerules</h4>
-              <p class="card-text">Allows you to change gamerules with a book.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/gamerules">Learn More</a>
+              <p class="card-text">Allows you to change gamerules with a book.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/one_cmd/gamerules">Learn More</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/iLskHTEAM4I/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Triggered</h4>
-              <p class="card-text">Makes you triggered in Minecraft.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/one_cmd/triggered">Learn More</a>
+              <p class="card-text">Makes you triggered in Minecraft.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/one_cmd/triggered">Learn More</a>
             </div>
           </div>
         </div>
@@ -121,9 +121,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card"> <img class="card-img-top" src="https://img.youtube.com/vi/Nii8T6rSAEw/maxresdefault.jpg" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body bg-primary">
               <h4 class="card-title">Rainbow Pack</h4>
-              <p class="card-text">Simplistic default edit wiht a slight rainbow theme.</p> <a class="btn btn-primary btn-lg btn-block" href="/mc/resource_packs/rainbow">Learn More</a>
+              <p class="card-text">Simplistic default edit wiht a slight rainbow theme.</p> <a class="btn btn-lg btn-block btn-secondary" href="/mc/resource_packs/rainbow">Learn More</a>
             </div>
           </div>
         </div>
@@ -131,8 +131,8 @@
       </div>
     </div>
   </div>
-  <div class="bg-dark pt-4">
-    <div class="py-3 bg-dark">
+  <div class="pt-4">
+    <div class="py-3">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -146,6 +146,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-</body>
+ </body>
 
 </html>
