--- a/mc/tutorials/command_server.html
+++ b/mc/tutorials/command_server.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark" style="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
         <p class="navbar-brand mb-0 text-white"> Samstep </p>
       </button>
@@ -23,26 +23,27 @@
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
-                    <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
+              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+            </a> </li>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
+                <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-              <i class="fa fa-github fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
-              <i class="fa fa-youtube fa-fw fa-lg"></i>
-            </a> </li>
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-              <i class="fa fa-twitter fa-fw fa-lg"></i>
-            </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+                <i class="fa fa-youtube fa-fw fa-lg"></i>
+              </a> </li>
+            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
+                <i class="fa fa-twitter fa-fw fa-lg"></i>
+              </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
-              <i class="fab fa-twitch fa-fw fa-lg"></i>
-            </a> </li>
+                <i class="fab fa-twitch fa-fw fa-lg"></i>
+              </a> </li>
+          </ul>
         </ul>
       </div>
     </div>
@@ -74,7 +75,7 @@
         </div>
         <div class="col-md-6 my-3">
           <div class="list-group">
-            <a href="#" class="list-group-item">MC Version: 1.9 - 1.10</a>
+            <a href="#" class="list-group-item text-primary">MC Version: 1.9 - 1.10</a>
             <a href="#" class="list-group-item list-group-item-action">Legend:<br>R: Repeating Command Block&nbsp;<br>C: Chain&nbsp;<br>I: Impulse&nbsp;<br>(CONDITIONAL): Command block should be in conditional</a>
           </div>
         </div>
@@ -83,8 +84,8 @@
         <div class="col-md-12 mt-3">
           <h1 class=""><a href="https://youtu.be/yprauoIBGgg">Episode 1 - Setup</a></h1>
           <div class="card text-white bg-secondary mb-3">
-            <div class="card-header">Commands</div>
-            <div class="card-body">
+            <div class="card-header bg-primary">Commands</div>
+            <div class="card-body bg-primary">
               <h5 class="card-title">Command Block(s):</h5>
               <p class="">Please watch <a href="#">Version 1.12 - Converting Functions</a></p>
               <p class="card-text">Command Entering System&nbsp;<br>R: execute @a[team=admin,score_cmdarea_min=1,score_cmdarea=1] ~ ~ ~ /tellraw @a[team=admin,score_cmdarea_min=1,score_cmdarea=1] ["",{"text":"[CMD] ","color":"dark_red"},{"text":"[Click Here to Teleport]","color":"gold","clickEvent":{"action":"run_command","value":"/tp @a[team=admin,r=2] @e[type=area_effect_cloud,name=redstoneZone]"},"hoverEvent":{"action":"show_text","value":{"text":"","extra":[{"text":"Click me to teleport!","color":"yellow"}]}}}]&nbsp;<br><br>C: scoreboard players enable @a[team=admin] cmdarea ​<br><br>C (CONDITIONAL): gamemode creative @a[team=admin,score_cmdarea_min=1,score_cmdarea=1]&nbsp;<br><br>C: /scoreboard players set @a[team=admin,score_cmdarea_min=1,score_cmdarea=1] cmdarea 0 </p>
@@ -96,8 +97,8 @@
         <div class="col-md-12 mt-3">
           <h1 class=""><a href="https://youtu.be/VpHwZe_MWhQ">Episode 2 - Ranks</a></h1>
           <div class="card text-white bg-secondary mb-3">
-            <div class="card-header">Commands</div>
-            <div class="card-body">
+            <div class="card-header bg-primary">Commands</div>
+            <div class="card-body bg-primary">
               <h5 class="card-title">In Chat:</h5>
               <p class="card-text">/scoreboard teams add<name><br><br>/scoreboard teams join&nbsp;<username></username>
                 </name>
@@ -123,7 +124,7 @@
         </div>
       </div>
       <div class="row my-2">
-        <div class="col-md-12 mt-0">
+        <div class="col-md-12">
           <h5 class="">vAdminTools Chat GUI Export for <a href="http://minecraftjson.com">minecraftjson.com</a></h5>
           <iframe src="https://pastebin.com/embed_iframe/StFBc33a" style="border:none;height:250px;width:100%"></iframe>
         </div>
@@ -155,8 +156,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card text-white bg-secondary mb-3">
-            <div class="card-header">Sell Sign Command</div>
-            <div class="card-body">
+            <div class="card-header bg-primary">Sell Sign Command</div>
+            <div class="card-body bg-primary">
               <h5 class="card-title">In Chat:</h5>
               <p class="card-text">/give @p sign 1 0 {BlockEntityTag:{Text1:"[{\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/scoreboard players set @p hasItem 1 {Inventory:[{id:\\\"minecraft:diamond\\\",Damage:0s}]}\"},\"text\":\"[Sell]\",\"bold\":\"true\"}]",Text2:"[{\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/clear @p[score_hasItem_min=1] minecraft:diamond 0 1\"},\"text\":\"Diamond\",\"underlined\":\"true\"}]",Text3:"[{\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/scoreboard players add @p[score_hasItem_min=1] Money 50\"},\"text\":\"$50\",\"color\":\"green\"}]",Text4:"[{\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/scoreboard players set @p hasItem 0\"},\"text\":\"1\"}]"},display:{Name:"Sell Diamond"}}&nbsp;</p>
             </div>
@@ -174,21 +175,20 @@
     </div>
   </div>
   <div class="bg-dark pt-4">
-
-  <div class="py-3 bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+    <div class="py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- 
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-</body>
+ </body>
 
 </html>
