--- a/bots/index.html
+++ b/bots/index.html
@@ -70,7 +70,7 @@
             <div class="card-body bg-primary" style="">
               <h3 class="" contenteditable="true"><span class="badge badge-light">New</span></h3>
               <h4 class="card-title">ModMail</h4>
-              <p class="card-text">Securely and safely message official server staff.</p> <a href="/bots/modmail" class="btn btn-secondary">Learn More</a>
+              <p class="card-text">Securely and safely message official server staff.</p> <a href="/invite-generator" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
         </div>
