--- a/old_site/about.html
+++ b/old_site/about.html
@@ -26,7 +26,7 @@
 
 
 				<!-- Main -->
-					<body>As said before, I am a beginner programmer. The idea of programming to me is really fun. I enjoy seeing the code in the editor being transformed to something visually beautiful. I first got into programming through a game called <a href="http://minecraft.net" target="_blank">Minecraft</a>. Some of my command block tutorials are still up if you are interested (<a href="http://bit.ly/sub2samstep" target="_blank">My YouTube</a>). Then when the wonderful chatting program <a href="http://discordapp.com" target="_blank">Discord</a> appeared out of nowhere I eventually learned you could make bots! I chose JavaScript for some unknown reason, but it was a really nice learning experience indeed.</body>
+					<body>As said before, I am a beginner programmer. The idea of programming to me is really fun. I enjoy seeing the code in the editor being transformed to something visually beautiful. I first got into programming through a game called <a href="http://minecraft.net" target="_blank">Minecraft</a>. Some of my command block tutorials are still up if you are interested (<a href=" https://youtube.com/samstep" target="_blank">My YouTube</a>). Then when the wonderful chatting program <a href="http://discordapp.com" target="_blank">Discord</a> appeared out of nowhere I eventually learned you could make bots! I chose JavaScript for some unknown reason, but it was a really nice learning experience indeed.</body>
 				
 
 				<!-- Footer -->
