--- a/bots/index.html
+++ b/bots/index.html
@@ -21,7 +21,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link active" href="https://samstep.net/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link active" href="/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -33,7 +33,7 @@
             <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
                 <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href=" https://youtube.com/samstep">
                 <i class="fa fa-youtube fa-fw fa-lg"></i>
               </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
@@ -59,7 +59,7 @@
           <div class="card">
             <div class="card-body bg-primary" style="">
               <h4 class="card-title" contenteditable="true">Bot Invite Generator</h4>
-              <p class="card-text">Supports generating server invite URLS for ModMail</p> <a href="/bots/modmail" class="btn btn-secondary">Open</a>
+              <p class="card-text">Supports generating server invite URLS for ModMail</p> <a href="/invite-generator" class="btn btn-secondary">Open</a>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
             <div class="card-body bg-primary" style="">
               <h3 class="" contenteditable="true"><span class="badge badge-light">New</span></h3>
               <h4 class="card-title">ModMail</h4>
-              <p class="card-text">Securely and safely message official server staff.</p> <a href="/invite-generator" class="btn btn-secondary">Learn More</a>
+              <p class="card-text">Securely and safely message official server staff.</p> <a href="/bots/modmail" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
         </div>
