--- a/mc/tutorials/joinmsg_1time.html
+++ b/mc/tutorials/joinmsg_1time.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="https://samstep.net/bots">Discord Bots</a> </li>
+          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link active" href="/mc">MC Tutorials &amp; Projects</a> </li>
           <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
         </ul>
@@ -36,7 +36,7 @@
             <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
                 <i class="fa fa-github fa-fw fa-lg"></i>
               </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://bit.ly/sub2samstep">
+            <li class="nav-item mx-1"> <a class="nav-link" href=" https://youtube.com/samstep">
                 <i class="fa fa-youtube fa-fw fa-lg"></i>
               </a> </li>
             <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
