--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
+  <link rel="stylesheet" href="../theme.css">
   <title>Samstep - Page Not Found</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
 </head>
@@ -49,7 +50,7 @@
   <div class="bg-dark py-5 pb-5">
     <div class="container">
       <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
+        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://samstep.net/images/logo.png" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
           <h1 class="text-light display-4">Could not find that page. Sorry...</h1>
         </div>
