--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
   <link rel="stylesheet" href="../theme.css">
+  <link rel="stylesheet" href="../../theme.css">
   <title>Samstep - Page Not Found</title>
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
 </head>
