--- a/index.html
+++ b/index.html
@@ -1,115 +1,117 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css" />
+    <link rel="stylesheet" href="theme.css" />
+    <title>Samstep - Home</title>
+    <link rel="icon" href="images/samstep-light.png" />
+    <link rel="stylesheet" type="text/css" href="transition.css" />
+    <meta name="description" content="Hey there! My name is Sam." />
+    <meta name="keywords" content="samstep" />
+    <meta content="samstep.net" property="og:title" />
+    <meta content="Hey there! My name is Sam. Learn a little bit about me on my site!" property="og:description" />
+    <meta content="https://samstep.net" property="og:url" />
+    <meta content="https://samstep.net/images/samstep.svg" property="og:image" />
+    <meta content="#2B738B" data-react-helmet="true" name="theme-color" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Home</title>
-  <link rel="icon" href="/images/logo.png">
-  <link rel="stylesheet" type="text/css" href="transition.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> Samstep </p>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar14">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
-            </a> </li>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-                <i class="fa fa-github fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href=" https://youtube.com/samstep">
-                <i class="fa fa-youtube fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-                <i class="fa fa-twitter fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
-                <i class="fab fa-twitch fa-fw fa-lg"></i>
-              </a> </li>
-          </ul>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="ldt-bounce-in d-block rounded-circle img-fluid float-left" src="/images/logo.png" width="200"></div>
-        <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="display-1 ldt-fade-in">Welcome!</h1>
-          <p class="ldt-fade-in">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time! Use the navigation bar above to checkout some of my work.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card text-center">
-            <div class="card-header bg-primary">Latest Bot Projects</div>
-            <div class="card-body bg-primary">
-              <h5 class="card-title" contenteditable="true">ModMail 2.0</h5>
-              <p class="card-text">Contact Discord server moderators or administrators safely and efficiently.</p>
-              <a class="btn btn-secondary" href="http://samstep.net/bots/modmail">Learn More</a>
-            </div>
+  <body>
+    <div class="py-5 text-center text-white align-items-center d-flex h-50" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bmd.jpg); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat">
+      <div class="container py-5">
+        <div class="row">
+          <div class="mx-auto col-lg-8 col-md-10">
+            <img
+              class="d-block rounded-circle img-fluid mx-auto"
+              src="images/samstep.svg"
+              width="250
+200"
+            />
+            <h1 class="display-3 mb-4">👋 <b>Hey there!</b></h1>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="display-4">Minecraft Projects</h1>
-          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> </li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"> </li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active" style=""> <img class="d-block img-fluid w-100 mx-auto" src="https://img.youtube.com/vi/hKEv2qAz9_M/maxresdefault.jpg">
-              </div>
-              <div class="carousel-item "> <img class="d-block img-fluid w-100" style="" src="https://img.youtube.com/vi/S0WoWQTGki8/maxresdefault.jpg">
-              </div>
-            </div>
-          </div><a class="btn text-center btn-block mx-auto mt-2 btn-primary" href="/mc">See More</a>
+    <div class="py-3 pt-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-left" style="">
+            <p class="lead pt-2 px-1">Hey there! My name is Sam and I am a college student studying Electrical and Computer Engineering. My passions lie in broadcast A/V technology and esports. I also enjoy making Discord bots in my free time and playing esports games. I am the Operations Director for the <a href="https://pacificesports.org" target="_blank">Pacific Esports League</a>&nbsp;and co-lead for a scholastic esports a program at the collegiate level.&nbsp;</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="pt-4">
+    <div class="py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="px-5 col-md-11 text-center mx-auto" style="">
+            <h3 class="display-4"><b>Discord Bot</b></h3>
+            <h2 class="my-3 text-light">ModMail</h2>
+            <p class="mb-3">I love making utility focused Discord bots that help server administrators and staff do their job <b>efficiently</b>, <b>quickly</b>, and <b>organized</b>. This system has helped me and countless staff members manage support requests with ease all within Discord. This is the same system used in the PEL Discord Server.</p>
+            <a href="https://samstep.net/bots/modmail" class="btn btn-primary">GitHub Repo</a>
+            <p class="mt-2"><small>Currently alpha-v3</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          <div class="p-3 col-md-8">
+            <div class="blockquote mb-0">
+              <p class="">Helping in developing the <a href="https://pacificesports.org" target="_blank">Pacific Esports League</a> to what it is today has been a blast! I am estatic for what the future holds for the organization and looking forward to helping bring more Californian students to esports.</p>
+              <a class="btn btn-primary" href="https://pacificesports.org/about-us">Learn More</a>
+            </div>
+          </div>
+          <div class="col-md-2 mx-auto p-3 w-25" style=""><img class="img-fluid d-block rounded-circle" src="https://pbs.twimg.com/profile_images/1476480346812157953/Q_ZyD33t_400x400.png" style="" height="25ch" /></div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center py-3 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="mx-auto col-md-11" style="">
+            <p class="mb-3 lead">While I do not use social media often, please follow for occassional updates!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="mx-auto col-md-4">
+            <div class="row">
+              <div class="col-md-12 d-flex align-items-center justify-content-between px-5">
+                <a href="#">
+                  <i class="d-block fa fa-twitter text-muted fa-2x"></i>
+                </a>
+                <a href="#">
+                  <i class="d-block fa fa-instagram text-muted fa-2x"></i>
+                </a>
+                <a href="#">
+                  <i class="d-block fa text-muted fa-2x fa-youtube"></i>
+                </a>
+                <a href="#">
+                  <i class="d-block fa text-muted fa-2x fa-twitch"></i>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  </div>
- </body>
-
+    <div class="pt-4">
+      <div class="py-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
+    </div>
+  </body>
 </html>
