--- a/404.html
+++ b/404.html
@@ -1,83 +1,36 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css" />
+    <link rel="stylesheet" href="theme.css" />
+    <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="../../theme.css" />
+    <title>Samstep - Page Not Found</title>
+    <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <link rel="stylesheet" href="../theme.css">
-  <link rel="stylesheet" href="../../theme.css">
-  <title>Samstep - Page Not Found</title>
-  <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
-</head>
-
-<body class="bg-dark">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> Samstep </p>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar14">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
-            </a> </li>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-                <i class="fa fa-github fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href=" https://youtube.com/samstep">
-                <i class="fa fa-youtube fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-                <i class="fa fa-twitter fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
-                <i class="fab fa-twitch fa-fw fa-lg"></i>
-              </a> </li>
-          </ul>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="bg-dark py-5 pb-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="d-block rounded-circle img-fluid float-left" src="https://samstep.net/images/logo.png" width="200"></div>
-        <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
-          <h1 class="text-light display-4">Could not find that page. Sorry...</h1>
+  <body class="bg-dark">
+    <div class="bg-dark py-5 pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"><img class="d-block rounded-circle img-fluid mx-auto" src="images/samstep.svg" width="500" /></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-10 col-md-12 ml-0 mt-0 my-2">
+            <h1 class="text-light display-4 text-center" style="">Page Not Found</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="text-center my-2 col-md-12" style=""><a class="btn btn-light" href="/" data-target="/">Go Home</a></div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center text-capitalize"><a class="btn btn-light" href="/" data-target="/">Go Home</a></div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white mt-5 pt-5">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
- </body>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
+  </body>
 </html>
