--- a/mc_index.html
+++ b/mc_index.html
@@ -1,102 +1,101 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css" />
+    <link rel="stylesheet" href="theme.css" />
+    <title>Samstep - Invite Generator</title>
+    <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Invite Generator</title>
-  <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
-</head>
-
-<body class="bg-dark">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> Samstep </p>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar14">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item mr-3"> <a class="nav-link disabled" href="/">SAMSTEP - MC Hosting</a> </li>
-          <li class="nav-item mr-2"> <a class="nav-link active" href="/">Dynmap</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="https://status.samstep.net">Status</a> </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
-            </a> </li>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-                <i class="fa fa-github fa-fw fa-lg"></i>
-              </a> </li>
+  <body class="bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
+      <div class="container">
+        <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
+          <p class="navbar-brand mb-0 text-white">Samstep</p>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar14">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item mr-3"><a class="nav-link disabled" href="/">SAMSTEP - MC Hosting</a></li>
+            <li class="nav-item mr-2"><a class="nav-link active" href="/">Dynmap</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://status.samstep.net">Status</a></li>
           </ul>
-        </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1">
+              <a class="nav-link" href="http://status.samstep.net">
+                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+              </a>
+            </li>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item mx-1">
+                <a class="nav-link" href="http://github.com/saamstep">
+                  <i class="fa fa-github fa-fw fa-lg"></i>
+                </a>
+              </li>
+            </ul>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <div class="pt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="text-light display-4">Dynmap<br></h1>
+    </nav>
+    <div class="pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 class="text-light display-4">Dynmap<br /></h1>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
+    <div class="">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center"></div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="">
-    <div class="container">
-      <div class="row">
+    <div class="">
+      <div class="container">
+        <div class="row"></div>
       </div>
     </div>
-  </div>
-  <div class="">
-    <div class="container">
-      <div class="row">
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="">A Google Maps-like map for your Minecraft server that can be viewed in a browser. <a href="https://www.spigotmc.org/resources/dynmap.274/" target="_blank">Dynmap</a> is a fun plugin to add some spruce to any <a href="https://www.minecraft.net/en-us" target="_blank">Minecraft</a> server!</p>
+    <div class="">
+      <div class="container">
+        <div class="row"></div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="">A Google Maps-like map for your Minecraft server that can be viewed in a browser. <a href="https://www.spigotmc.org/resources/dynmap.274/" target="_blank">Dynmap</a> is a fun plugin to add some spruce to any <a href="https://www.minecraft.net/en-us" target="_blank">Minecraft</a> server!</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="py-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-body">
-          <div class="card">
-            <div class="card-body bg-primary" style="">
-              <h3 class="display-4">SCU SMP</h3>
-              <a href="/scu" class="btn btn-secondary">Open</a>
+    <div class="py-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-body">
+            <div class="card">
+              <div class="card-body bg-primary" style="">
+                <h3 class="display-4">SCU SMP</h3>
+                <a href="/scu" class="btn btn-secondary">Open</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="text-white mt-5 pt-5">By Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+    <div class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p class="text-white mt-5 pt-5">By Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
-</body>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
+  </body>
 </html>
