--- a/watch.html
+++ b/watch.html
@@ -1,96 +1,102 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css" />
+    <link rel="stylesheet" href="theme.css" />
+    <title>Samstep - Home</title>
+    <link rel="icon" href="/images/logo.png" />
+    <link rel="stylesheet" type="text/css" href="transition.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <title>Samstep - Home</title>
-  <link rel="icon" href="/images/logo.png">
-  <link rel="stylesheet" type="text/css" href="transition.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
-        <p class="navbar-brand mb-0 text-white"> Samstep </p>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar14">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link active" href="/">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="/about">About</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/bots">Discord Bots</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a> </li>
-          <li class="nav-item d-flex"> <a class="nav-link" href="/contact">Contact</a> </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-1"> <a class="nav-link" href="http://status.samstep.net">
-              <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
-            </a> </li>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://github.com/saamstep">
-                <i class="fa fa-github fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href=" https://youtube.com/samstep">
-                <i class="fa fa-youtube fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="http://twitter.com/Saamstep">
-                <i class="fa fa-twitter fa-fw fa-lg"></i>
-              </a> </li>
-            <li class="nav-item mx-1"> <a class="nav-link" href="https://twitch.tv/samstep">
-                <i class="fab fa-twitch fa-fw fa-lg"></i>
-              </a> </li>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="">
+      <div class="container">
+        <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
+          <p class="navbar-brand mb-0 text-white">Samstep</p>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar14">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item d-flex"><a class="nav-link" href="/bots">Discord Bots</a></li>
+            <li class="nav-item d-flex"><a class="nav-link" href="/mc">MC Tutorials &amp; Projects</a></li>
+            <li class="nav-item d-flex"><a class="nav-link" href="/contact">Contact</a></li>
           </ul>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="py-5" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-1">
+              <a class="nav-link" href="http://status.samstep.net">
+                <i class="fa fa-exclamation-circle fa-fw fa-lg"></i>
+              </a>
+            </li>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item mx-1">
+                <a class="nav-link" href="http://github.com/saamstep">
+                  <i class="fa fa-github fa-fw fa-lg"></i>
+                </a>
+              </li>
+              <li class="nav-item mx-1">
+                <a class="nav-link" href=" https://youtube.com/samstep">
+                  <i class="fa fa-youtube fa-fw fa-lg"></i>
+                </a>
+              </li>
+              <li class="nav-item mx-1">
+                <a class="nav-link" href="http://twitter.com/Saamstep">
+                  <i class="fa fa-twitter fa-fw fa-lg"></i>
+                </a>
+              </li>
+              <li class="nav-item mx-1">
+                <a class="nav-link" href="https://twitch.tv/samstep">
+                  <i class="fab fa-twitch fa-fw fa-lg"></i>
+                </a>
+              </li>
+            </ul>
+          </ul>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div id="twitch-embed"></div>
-        </div>
-        <div class="col-md-6"><iframe id="chat_embed" src="https://www.twitch.tv/embed/samstep/chat?parent=www.example.com" height="500" width="350">
-          </iframe></div>
-        <!-- Load the Twitch embed script -->
-        <script src="https://player.twitch.tv/js/embed/v1.js"></script>
-        <!-- Create a Twitch.Player object. This will render within the placeholder div -->
-        <script type="text/javascript">
-          new Twitch.Player("twitch-embed", {
-            channel: "samstep",
-            parent: ["watch.samstep.net"]
-          });
-        </script>
-      </div>
-    </div>
-  </div>
-  <div class="pt-4">
-    <div class="py-3">
+    </nav>
+    <div class="py-5" style="">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+          <div class="col-md-12"></div>
+        </div>
+      </div>
+    </div>
+    <div class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div id="twitch-embed"></div>
+          </div>
+          <div class="col-md-6"><iframe id="chat_embed" src="https://www.twitch.tv/embed/samstep/chat?parent=www.example.com" height="500" width="350"> </iframe></div>
+          <!-- Load the Twitch embed script -->
+          <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+          <!-- Create a Twitch.Player object. This will render within the placeholder div -->
+          <script type="text/javascript">
+            new Twitch.Player("twitch-embed", {
+              channel: "samstep",
+              parent: ["watch.samstep.net"],
+            });
+          </script>
+        </div>
+      </div>
+    </div>
+    <div class="pt-4">
+      <div class="py-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+            </div>
           </div>
         </div>
       </div>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
-</body>
-
+  </body>
 </html>
