--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta content="#2B738B" data-react-helmet="true" name="theme-color" />
   </head>
 
-  <body>
+  <body class="">
     <div class="py-5 text-center text-white align-items-center d-flex h-50" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bmd.jpg); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat">
       <div class="container py-5">
         <div class="row">
@@ -43,15 +43,14 @@
         </div>
       </div>
     </div>
-    <div class="py-3 bg-dark">
+    <div class="py-3">
       <div class="container">
         <div class="row">
           <div class="px-5 col-md-11 text-center mx-auto" style="">
-            <h3 class="display-4"><b>Discord Bot</b></h3>
+            <h3 class="display-4"><b>Discord Bots</b></h3>
             <h2 class="my-3 text-light">ModMail</h2>
             <p class="mb-3">I love making utility focused Discord bots that help server administrators and staff do their job <b>efficiently</b>, <b>quickly</b>, and <b>organized</b>. This system has helped me and countless staff members manage support requests with ease all within Discord. This is the same system used in the PEL Discord Server.</p>
-            <a href="https://samstep.net/bots/modmail" class="btn btn-primary">GitHub Repo</a>
-            <p class="mt-2"><small>Currently alpha-v3</small></p>
+            <a href="https://samstep.net/bots/modmail" class="btn btn-primary">Visit Project Page</a>
           </div>
         </div>
       </div>
@@ -59,17 +58,22 @@
     <div class="py-3">
       <div class="container">
         <div class="row">
+          <div class="col-md-12">
+            <h1 class="display-4">Nonprofit Initiative</h1>
+          </div>
+        </div>
+        <div class="row">
           <div class="p-3 col-md-8">
             <div class="blockquote mb-0">
               <p class="">Helping in developing the <a href="https://pacificesports.org" target="_blank">Pacific Esports League</a> to what it is today has been a blast! I am estatic for what the future holds for the organization and looking forward to helping bring more Californian students to esports.</p>
               <a class="btn btn-primary" href="https://pacificesports.org/about-us">Learn More</a>
             </div>
           </div>
-          <div class="col-md-2 mx-auto p-3 w-25" style=""><img class="img-fluid d-block rounded-circle" src="https://pbs.twimg.com/profile_images/1476480346812157953/Q_ZyD33t_400x400.png" style="" height="25ch" /></div>
+          <div class="col-md-2 mx-auto p-3 w-25" style=""><img class="img-fluid d-block rounded-circle" src="https://i.imgur.com/wr8SqNX.png" height="25ch" /></div>
         </div>
       </div>
     </div>
-    <div class="text-center py-3 bg-dark">
+    <div class="text-center py-3">
       <div class="container">
         <div class="row">
           <div class="mx-auto col-md-11" style="">
@@ -80,16 +84,13 @@
           <div class="mx-auto col-md-4">
             <div class="row">
               <div class="col-md-12 d-flex align-items-center justify-content-between px-5">
-                <a href="#">
+                <a href="https://twitter.com/Saamstep" target="_blank">
                   <i class="d-block fa fa-twitter text-muted fa-2x"></i>
                 </a>
-                <a href="#">
-                  <i class="d-block fa fa-instagram text-muted fa-2x"></i>
-                </a>
-                <a href="#">
+                <a href="https://youtube.com/Samstep " target="_blank">
                   <i class="d-block fa text-muted fa-2x fa-youtube"></i>
                 </a>
-                <a href="#">
+                <a href="https://twitch.tv/Samstep" target="_blank">
                   <i class="d-block fa text-muted fa-2x fa-twitch"></i>
                 </a>
               </div>
@@ -98,12 +99,12 @@
         </div>
       </div>
     </div>
-    <div class="pt-4">
-      <div class="py-3">
+    <div class="bg-dark">
+      <div class="">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 text-center">
-              <p class="text-white">Website by Samstep | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
+            <div class="col-md-12 text-center pt-2">
+              <p class="text-white">Website by Sam | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
             </div>
           </div>
         </div>
