--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
 </head>
 
 <body class="">
-  <div class="py-5 text-center text-white align-items-center d-flex h-50" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bmd.jpg); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat">
+  <div class="text-center text-white align-items-center d-flex py-5 h-50" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bmd.jpg); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat">
     <div class="container py-5">
       <div class="row">
         <div class="mx-auto col-lg-8 col-md-10">
-          <img class="d-block rounded-circle img-fluid mx-auto" src="images/samstep-light-t.svg" width="200
-200">
-          <h3 class="display-4 mb-5" style="">Samstep</h3>
+          <img class="d-block rounded-circle img-fluid mx-auto" src="images/samstep-light-t.svg" width="150">
+          <h3 class="display-4 mb-3" style="">Samstep</h3>
           <h3 class="text-body">👋 <b>Hey there!</b></h3>
         </div>
       </div>
@@ -132,7 +131,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
   </div>
- 
+
 </body>
 
 </html>
